force-app/main/default/objects/Project_Area_Type__c/Project_Area_Type__c.object-meta.xml
<CustomObject>
    <label>Project Area Type</label>
    <nameField>
        <label>Project Area Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Area Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>