force-app/main/default/objects/Project_Area_Type__c/fields/Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Area_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area Type</label>
    <referenceTo>Area_Type__c</referenceTo>
    <relationshipLabel>Project Area Types</relationshipLabel>
    <relationshipName>Project_Area_Types</relationshipName>
    <type>Lookup</type>
</CustomField>