force-app/main/default/objects/Project_Area_Type__c/fields/nUOMIID__c.field-meta.xml
<CustomField>
    <fullName>nUOMIID__c</fullName>
    <label>nUOMIID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>