force-app/main/default/objects/Project_Area_Type__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Area Types</relationshipLabel>
    <relationshipName>Project_Area_Types</relationshipName>
    <type>Lookup</type>
</CustomField>