force-app/main/default/objects/Project_Area_Type__c/fields/Unique_Area__c.field-meta.xml
<CustomField>
    <fullName>Unique_Area__c</fullName>
    <label>Unique Area</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>