force-app/main/default/objects/Project_Area_Type__c/fields/Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measurement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measurement</label>
    <referenceTo>Global_Unit_Of_Measurement__c</referenceTo>
    <relationshipLabel>Project Area Types</relationshipLabel>
    <relationshipName>Project_Area_Types</relationshipName>
    <type>Lookup</type>
</CustomField>